; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_asix.c_asix_mdio_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_asix.c_asix_mdio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.usbnet = type { i32 }

@AX_CMD_READ_MII_REG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"asix_mdio_read() phy_id=0x%02x, loc=0x%02x, returns=0x%04x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32, i32)* @asix_mdio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asix_mdio_read(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.usbnet*, align 8
  %8 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.net_device*, %struct.net_device** %4, align 8
  %10 = call %struct.usbnet* @netdev_priv(%struct.net_device* %9)
  store %struct.usbnet* %10, %struct.usbnet** %7, align 8
  %11 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %12 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %11, i32 0, i32 0
  %13 = call i32 @mutex_lock(i32* %12)
  %14 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %15 = call i32 @asix_set_sw_mii(%struct.usbnet* %14)
  %16 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %17 = load i32, i32* @AX_CMD_READ_MII_REG, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @asix_read_cmd(%struct.usbnet* %16, i32 %17, i32 %18, i32 %19, i32 2, i32* %8)
  %21 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %22 = call i32 @asix_set_hw_mii(%struct.usbnet* %21)
  %23 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %24 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  %26 = load %struct.usbnet*, %struct.usbnet** %7, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @le16_to_cpu(i32 %29)
  %31 = call i32 @devdbg(%struct.usbnet* %26, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %28, i32 %30)
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @le16_to_cpu(i32 %32)
  ret i32 %33
}

declare dso_local %struct.usbnet* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @asix_set_sw_mii(%struct.usbnet*) #1

declare dso_local i32 @asix_read_cmd(%struct.usbnet*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @asix_set_hw_mii(%struct.usbnet*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @devdbg(%struct.usbnet*, i8*, i32, i32, i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
